// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<YotpoIntegrationDetailComponent/> componentDidMount() should set the integration's name in the state 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          test
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="test"
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-2"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should not do anything because the previous integration was not empty 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          bar
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-8"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should not do anything because there is no integration 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-4"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should set the name of the integration in the state because there was no integration before and there is one now 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          test
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="test"
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-6"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should set the name of the integration the state and set a timeout to fetch the integration because the action in the URL is set to \`authentication\` and the integration is not yet authenticated 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          foo
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-10"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> componentWillReceiveProps() should set the name of the integration the state and trigger a success notification because the action in the URL is set to \`authentication\` and the integration is already authenticated 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          foo
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value="foo"
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-12"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should not render anything about the import and render the re-activate button instead of the deactivate button because the integration is deactivated 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-24"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render a loader because the integration is loading 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render a small paragraph because the import is over 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-18"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render an alert because the import is in progress 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-16"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render buttons loading and disabled because a submit is in progress 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn-loading btn btn-success disabled"
            disabled=""
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn-loading btn btn-success disabled"
            disabled=""
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="true"
            class="wrapper float-right fill destructive medium isDisabled"
            id="confirm-20"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<YotpoIntegrationDetailComponent/> render() should render not render deactivate / reactivate buttons because authentication is required 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/yotpo"
          >
            Yotpo
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="InputField form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-name"
          >
            Integration name
          </label>
          <div
            class=""
          >
            <input
              class="field form-control"
              id="id-name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div>
          <label
            class="label label"
            for="enable_yotpo_tickets"
          >
            <input
              class="input"
              id="enable_yotpo_tickets"
              name="enable_yotpo_tickets"
              type="checkbox"
            />
            Enable Yotpo ticket
          </label>
          <div
            class="caption caption"
          >
            <div>
              By Enabling Yotpo tickets, you will allow Yotpo reviews to create tickets on Gorgias. If you are using emails to integrate Yotpo reviews you should disable the emails to avoid Yotpo reviews ticket being duplicated.
            </div>
          </div>
        </div>
        <br />
        <div>
          <button
            class="mr-2 btn btn-success"
            type="submit"
          >
            Update integration
          </button>
          <button
            class="btn btn-success"
            type="button"
          >
            Reconnect integration
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="confirm-22"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                delete
              </i>
              Delete App
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
